--- a/forester.opam
+++ b/forester.opam
@@ -29,6 +29,11 @@ depends: [
   "uri" {>= "4.4.0"}
   "pure-html" {>= "3.5.0"}
   "base64" {>= "3.5.1"}
+  "nottui" {>= "0.3"}
+  "base64" {>= "3.5.1"}
+  "nottui" {>= "0.3"}
+  "irmin" {>= "3.9.0"}
+  "irmin-fs" {>= "3.9.0"}
   "odoc" {with-doc}
 ]
 build: [
@@ -46,3 +51,9 @@ build: [
   ]
 ]
 dev-repo: "git+https://git.sr.ht/~jonsterling/ocaml-forester"
+pin-depends: [
+  ["irmin.dev" "git+https://github.com/art-w/irmin#9d606d78375abcd4c961331a1e8ee8f9be9212cb"]
+  ["irmin-git.dev" "git+https://github.com/art-w/irmin#9d606d78375abcd4c961331a1e8ee8f9be9212cb"]
+  ["irmin-fs.dev" "git+https://github.com/art-w/irmin#9d606d78375abcd4c961331a1e8ee8f9be9212cb"]
+  ["ppx_irmin.dev" "git+https://github.com/art-w/irmin#9d606d78375abcd4c961331a1e8ee8f9be9212cb"]
+]
