--- a/forester.opam
+++ b/forester.opam
@@ -32,6 +32,7 @@ depends: [
   "nottui" {>= "0.3"}
   "irmin" {>= "3.9.0"}
   "irmin-fs" {>= "3.9.0"}
+  "irmin-git" {>= "3.9.0"}
   "odoc" {with-doc}
 ]
 build: [
@@ -52,6 +53,7 @@ dev-repo: "git+https://git.sr.ht/~jonsterling/ocaml-forester"
 pin-depends: [
   ["irmin.dev" "git+https://github.com/art-w/irmin#9d606d78375abcd4c961331a1e8ee8f9be9212cb"]
   ["irmin-git.dev" "git+https://github.com/art-w/irmin#9d606d78375abcd4c961331a1e8ee8f9be9212cb"]
+  ["irmin-watcher.dev" "git+https://github.com/mirage/irmin-watcher#834fc4903209b1516b010cbc7e134ebe115299c9"]
   ["irmin-fs.dev" "git+https://github.com/art-w/irmin#9d606d78375abcd4c961331a1e8ee8f9be9212cb"]
   ["ppx_irmin.dev" "git+https://github.com/art-w/irmin#9d606d78375abcd4c961331a1e8ee8f9be9212cb"]
 ]
