--- a/forester.opam.template
+++ b/forester.opam.template
@@ -1,6 +1,7 @@
 pin-depends: [
   ["irmin.dev" "git+https://github.com/art-w/irmin#9d606d78375abcd4c961331a1e8ee8f9be9212cb"]
   ["irmin-git.dev" "git+https://github.com/art-w/irmin#9d606d78375abcd4c961331a1e8ee8f9be9212cb"]
+  ["irmin-watcher.dev" "git+https://github.com/mirage/irmin-watcher#834fc4903209b1516b010cbc7e134ebe115299c9"]
   ["irmin-fs.dev" "git+https://github.com/art-w/irmin#9d606d78375abcd4c961331a1e8ee8f9be9212cb"]
   ["ppx_irmin.dev" "git+https://github.com/art-w/irmin#9d606d78375abcd4c961331a1e8ee8f9be9212cb"]
 ]
