--- a/forester.opam
+++ b/forester.opam
@@ -33,6 +33,8 @@ depends: [
   "irmin" {>= "3.9.0"}
   "irmin-fs" {>= "3.9.0"}
   "irmin-git" {>= "3.9.0"}
+  "pretty_expressive"
+  "linenoise"
   "odoc" {with-doc}
 ]
 build: [
